fixing about section heading alignment

--- a/components/services/MobileAppDevelopment/Styles.css
+++ b/components/services/MobileAppDevelopment/Styles.css
@@ -68,3 +68,160 @@
     /* // padding: 40px; */
   }
 }
+
+/* mobile mockups animation */
+.mobile-main-container {
+  width: 100%;
+  height: 450px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  overflow-y: hidden;
+}
+
+.mobile-gallery {
+  width: 100%;
+}
+
+.mobile-gallery-container {
+  display: flex;
+  align-items: center;
+  height: 450px;
+  margin: 0 auto;
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+}
+
+.mobile-gallery-item {
+  height: 320px;
+  width: 10.5rem;
+  opacity: 0;
+  position: absolute;
+  transition: all 0.3s ease-in-out;
+  z-index: 0;
+  border-radius: 15px;
+  background-size: contain !important;
+}
+
+.mobile-gallery-item-1 {
+  left: 23.5%;
+  opacity: 1;
+  transform: translateX(-50%);
+  top: 8%;
+}
+
+.mobile-gallery-item-2,
+.mobile-gallery-item-4 {
+  height: 350px;
+  width: 11rem;
+  opacity: 1;
+  z-index: 1;
+}
+
+.mobile-gallery-item-2 {
+  left: 36%;
+  transform: translateX(-50%);
+  top: 15%;
+}
+
+.mobile-gallery-item-3 {
+  box-shadow: none;
+  height: 423px;
+  opacity: 1;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 13rem;
+  z-index: 2;
+}
+
+.mobile-gallery-item-4 {
+  right: 36%;
+  transform: translateX(50%);
+  top: 8%;
+}
+
+.mobile-gallery-item-5 {
+  right: 23.5%;
+  opacity: 1;
+  transform: translateX(50%);
+  top: 22%;
+}
+
+.mobile-gallery-item-6 {
+  left: 11.6%;
+  opacity: 1;
+  transform: translateX(-50%);
+  top: 20%;
+  z-index: 0;
+  width: 10rem;
+  height: 300px;
+}
+
+.mobile-gallery-item-7 {
+  right: 11.6%;
+  opacity: 1;
+  transform: translateX(50%);
+  top: 15%;
+  z-index: 0;
+  width: 10rem;
+  height: 300px;
+}
+
+.mobile-gallery-item-exit {
+  display: none !important;
+  transition: display 4s ease-in-out, transform 4s ease-in-out;
+  z-index: 0;
+}
+
+/* gallery controls */
+.mobile-gallery-controls {
+  display: none;
+}
+.mobile-control-btn {
+  display: none;
+}
+
+@media (max-width: 600px) {
+  .mobile-main-container {
+    width: 100%;
+    height: 300px;
+  }
+  .mobile-gallery-container {
+    height: 300px;
+  }
+  .mobile-gallery-item-3 {
+    box-shadow: none;
+    height: 200px;
+    opacity: 1;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 310px;
+    z-index: 2;
+  }
+
+  .mobile-gallery-item-1 {
+    left: -100%;
+    opacity: 1;
+    transform: translateX(-50%);
+    top: 35%;
+  }
+
+  .mobile-gallery-item-2 {
+    left: 220%;
+    transform: translateX(-50%);
+  }
+
+  .mobile-gallery-item-4 {
+    left: 210%;
+    transform: translateX(-50%);
+  }
+
+  .mobile-gallery-item-5 {
+    left: 222%;
+    opacity: 1;
+    transform: translateX(-50%);
+    top: 38%;
+  }
+}
